--- a/nuxt-project/package.json
+++ b/nuxt-project/package.json
@@ -11,8 +11,15 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "eslint": "^8.55.0",
+    "happy-dom": "^12.10.3",
     "nuxt": "^3.8.2",
+    "nuxt-vitest": "^0.11.5",
+    "vitest": "^0.33.0",
     "vue": "^3.3.8",
     "vue-router": "^4.2.5"
+  },
+  "dependencies": {
+    "@pinia/nuxt": "^0.5.1"
   }
 }
